Moving all the html files to the src folder and the css files to the styles folder

--- a/src/ui/cards.html
+++ b/src/ui/cards.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Cards</title>
-	<link rel="stylesheet" type="text/css" href="cards.css">
+	<link rel="stylesheet" type="text/css" href="../../styles/ui/cards.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 	<meta charset="utf-8" lang="es">
 </head>
@@ -11,7 +11,7 @@
 		<div class="Card">
 			<h1>Ingenieria de software</h1>
 			<figure>
-				<img src="img1.png">
+				<img src="../../assets/img1.png">
 			</figure>
 			<div class="contenido">
 				<h2>Mejores calificados</h2>
