--- a/src/ui/rows.html
+++ b/src/ui/rows.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Rows</title>
-	<link rel="stylesheet" type="text/css" href="rows.css">
+	<link rel="stylesheet" type="text/css" href="../../styles/ui/rows.css">
 	<meta charset="utf-8" lang="es">
 
 
