--- a/src/ui/tags.html
+++ b/src/ui/tags.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>tags</title>
-	<link rel="stylesheet" type="text/css" href="tags.css">
+	<link rel="stylesheet" type="text/css" href="../../styles/ui/tags.css">
     <meta charset="utf-8" lang="es">
 </head>
 <body>
