--- a/src/Alumnos.html
+++ b/src/Alumnos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="estilosform.css">
+        <link rel="stylesheet" href="../styles/estilosform.css">
         <meta lang="es" charset="utf-8">
 
     </head>
